--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2973,6 +2973,82 @@ Uncertainties based on
    year = {2011}
 }
 
+@article{Chatrchyan:2012lia,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for new physics in the multijet and missing
+                        transverse momentum final state in proton-proton
+                        collisions at $\sqrt{s} = 7$ TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "109",
+      pages          = "171803",
+      doi            = "10.1103/PhysRevLett.109.171803",
+      year           = "2012",
+      eprint         = "1207.1898",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-12-011, CERN-PH-EP-2012-184",
+      SLACcitation   = "%%CITATION = ARXIV:1207.1898;%%",
+}
+
+@article{Chatrchyan:2013lya,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for supersymmetry in hadronic final states with
+                        missing transverse energy using the variables $\alpha_T$
+                        and b-quark multiplicity in pp collisions at $\sqrt s=8$
+                        TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Eur.Phys.J.",
+      volume         = "C73",
+      pages          = "2568",
+      doi            = "10.1140/epjc/s10052-013-2568-6",
+      year           = "2013",
+      eprint         = "1303.2985",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-12-028, CERN-PH-EP-2013-037",
+      SLACcitation   = "%%CITATION = ARXIV:1303.2985;%%",
+}
+
+@article{Chatrchyan:2013wxa,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for gluino mediated bottom- and top-squark
+                        production in multijet final states in pp collisions at 8
+                        TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B725",
+      pages          = "243-270",
+      doi            = "10.1016/j.physletb.2013.06.058",
+      year           = "2013",
+      eprint         = "1305.2390",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-12-024, CERN-PH-EP-2013-076",
+      SLACcitation   = "%%CITATION = ARXIV:1305.2390;%%",
+}
+
+@techreport{CMS-PAS-SUS-13-019,
+      title         = "{Search for supersymmetry in hadronic final states using
+                       MT2 with the CMS detector at sqrt(s) = 8 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-SUS-13-019",
+      year          = "2014",
+}
+
+@techreport{CMS-PAS-SUS-14-011,
+      title         = "{Exclusion limits on gluino and top-squark pair production
+                       in natural SUSY scenarios with inclusive razor and
+                       exclusive single-lepton searches at 8 TeV.}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-SUS-14-011",
+      year          = "2014",
+}
+
 @article{CMS-PAS-SUS-11-004,
       title         = {Search for supersymmetry in all-hadronic events with missing energy},
       collaboration = {CMS},
@@ -4434,6 +4510,37 @@ author = "S. Agostinelli and J. Allison and K. Amako and J. Apostolakis and H. A
       SLACcitation   = "%%CITATION = HEP-PH/0403045;%%",
 }
 
+@article{Kidonakis:2010dk,
+      author         = "Kidonakis, Nikolaos",
+      title          = "{Next-to-next-to-leading soft-gluon corrections for the
+                        top quark cross section and transverse momentum
+                        distribution}",
+      journal        = "Phys.Rev.",
+      volume         = "D82",
+      pages          = "114030",
+      doi            = "10.1103/PhysRevD.82.114030",
+      year           = "2010",
+      eprint         = "1009.4935",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1009.4935;%%",
+}
+
+@article{Melnikov:2006kv,
+      author         = "Melnikov, Kirill and Petriello, Frank",
+      title          = "{Electroweak gauge boson production at hadron colliders
+                        through O(alpha(s)**2)}",
+      journal        = "Phys.Rev.",
+      volume         = "D74",
+      pages          = "114017",
+      doi            = "10.1103/PhysRevD.74.114017",
+      year           = "2006",
+      eprint         = "hep-ph/0609070",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UH-511-1092-06",
+      SLACcitation   = "%%CITATION = HEP-PH/0609070;%%",
+}
 
 % --- Statistics ------------------------------------------
 @inproceedings{Lyons:411537,
