--- a/RA2.tex
+++ b/RA2.tex
@@ -230,6 +230,36 @@ The analysis presented in this Chapter is an extension of previous inclusive sea
 \section{Results and Interpretation}
 \label{sec:RA2_results}
 
+\begin{figure}[!t]
+  \centering
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/RA2_results_tab.png}
+  \end{tabular}
+  \caption{Predicted event yields for the different background components in the search regions defined by \HT, \MHT and \NJets. The uncertainties of the different background sources are added in quadrature to obtain the total uncertainties. Taken from~\cite{Chatrchyan:2014lfa}.}
+  \label{fig:ra2_results_tab}
+\end{figure}
+
+\begin{figure}[!t]
+  \centering
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/RA2_summary.pdf}
+  \end{tabular}
+  \caption{Summary of the observed number of events in each of the 36 search regions in comparison to the corresponding background prediction. The hatched region shows the total uncertainty of the background prediction. Taken from~\cite{Chatrchyan:2014lfa}.}
+  \label{fig:ra2_summary}
+\end{figure}
+
+\begin{figure}[!t]
+  \centering
+  \begin{tabular}{cc}
+                \includegraphics[width=0.49\textwidth]{figures/RA2_Limit1.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/RA2_Limit2.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/RA2_Limit3.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/RA2_Limit4.pdf} \\
+  \end{tabular}
+\caption{The observed and expected 95\% CL upper limits on the (a) squark-squark and (b-d) gluino-gluino production cross sections in either the m(squark)-m(LSP) or the m(gluino)-m(LSP) plane obtained with the simplified models. For the squark-squark production the upper set of curves corresponds to the scenario when the first two generations of squarks are degenerate and light, while the lower set corresponds to only one light accessible squark. Taken from~\cite{Chatrchyan:2014lfa}.} 
+  \label{fig:ra2_limits}
+\end{figure}
+
 \subsection{Comparison to Other Measurements}
 \label{subsec:RA2_comp}
 
