--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2297,6 +2297,11 @@ primaryClass   = "hep-ph"
  year          = {2008}
 }
 
+@misc{JOtt,
+  note = "J.~Ott, private communication",
+  year = {2013}
+}
+
 @article{bib:AN2013-416,
  author = {Kristin Goebel and Johannes Haller and Jochen Ott and Hartmut Stadie},
  title = {Jet Transverse Momentum Resolution Measurement using Dijet Events at $\sqrt{s} = 8$\tev},
