--- a/RA2.tex
+++ b/RA2.tex
@@ -127,7 +127,7 @@ The analysis presented in this Chapter is an extension of previous inclusive sea
 %\selectfont
 \centering
 \caption{Search regions used in the analysis binned in \HT, \MHT and \NJets.}
-\begin{tabular}{llll}
+\begin{tabular}{lccc}
 \multicolumn{4}{c}{} \\
   \toprule
    \NJets & [3-5] & [6-7] & [$\geq$8]  \\
