--- a/Resolution.tex
+++ b/Resolution.tex
@@ -211,7 +211,7 @@ In some more detail this means that the measured data points are described by a 
 \begin{equation}
  a \cdot \alpha_{max} + b = \sigma_\mathrm{A}(\alpha_{max})
 \end{equation}
-by determining the parameters a and b. This is done for known $\alpha_{max}$ and $\sigma_\mathrm{A}(\alpha_{max})$ by minimizing 
+by determining the parameters $a$ and $b$. This is done for known $\alpha_{max}$ and $\sigma_\mathrm{A}(\alpha_{max})$ by minimizing 
 \begin{equation}
 \chi^2 = dy^T \cdot C^{-1} \cdot dy
 \end{equation}
